# ChangeLog for media-gfx/gif2png
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gif2png/ChangeLog,v 1.1 2003/03/16 21:39:10 malverian Exp $

*gif2png-2.4.6 (16 Mar 2003)

  16 Mar 2003; Philip Walls <malverian@gentoo.org
  Initial import.  Ebuild submitted by Don Seiler <don@seiler.us>.