@@ -1,13 +1,13 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gif2png/gif2png-2.4.6.ebuild,v 1.1 2003/03/16 21:39:10 malverian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gif2png/gif2png-2.4.6.ebuild,v 1.2 2003/03/22 17:55:46 mholzer Exp $
 
 IUSE=""
 
 S=${WORKDIR}/${P}
 DESCRIPTION="gif2png"
-SRC_URI="http://www.ibiblio.org/pub/Linux/apps/graphics/convert/${PN}-${PV}.tar.gz"
-HOMEPAGE="http://www.tuxedo.org/~esr/gif2png/"
+SRC_URI="http://catb.org/~esr/${PN}/${P}.tar.gz"
+HOMEPAGE="http://catb.org/~esr/gif2png/"
 
 SLOT="0"
 LICENSE="GPL-2"
